# oprf-testnet

./: .gitignore  .gitmodules  Cargo.toml  README.md  allowed_vsock  deny.toml  justfile  local-setup.sh  send_conf.sh
.github/workflows/: e2e_test.yml  release-plz.yml  release.yml  rust_lint.yml  rust_test.yml
circuits/einfallswinkel_ist_gleich_ausfallswinkel/: Nargo.toml  Prover.toml
circuits/einfallswinkel_ist_gleich_ausfallswinkel/src/: main.nr
noir/babyjubjub/src/: escalar_mul_fix.nr  lib.nr  montgomery.nr
noir/blinded_query_proof/: Nargo.toml  Prover.toml  verifier.sol
noir/blinded_query_proof/example_contracts/: verifier.s.sol  verify.s.sol
noir/blinded_query_proof/src/: main.nr
noir/ecrecover/: Nargo.toml
noir/ecrecover/src/: lib.nr  secp256k1.nr
noir/oprf/: Nargo.toml  Prover.toml
noir/oprf/src/: commitment.nr  credential_signature.nr  dlog.nr  lib.nr  nullifier.nr  query.nr
noir/prototype_oprf/: Nargo.toml  Prover.toml  Prover.toml.old  verifier.sol
noir/prototype_oprf/src/: main.nr  nullifier_proof.nr  query_proof.nr
noir/verified_oprf_proof/: Nargo.toml  Prover.toml  verifier.sol
noir/verified_oprf_proof/example_contracts/: verify.s.sol
noir/verified_oprf_proof/src/: main.nr
oprf-attestation/: Cargo.toml
oprf-attestation/src/: lib.rs
oprf-testnet-authentication/: Cargo.toml  blinded_query_proof.json  blinded_query_proof.vk  verified_oprf_proof.json
oprf-testnet-authentication/src/: basic.rs  lib.rs  unkey_api.rs  wallet_ownership.rs
oprf-testnet-client/: Cargo.toml
oprf-testnet-client/src/: lib.rs  main.rs
oprf-testnet-dev-client/: Cargo.toml
oprf-testnet-dev-client/src/: main.rs
oprf-testnet-node/: Cargo.toml
oprf-testnet-node/deploy/: docker-compose.yml
oprf-testnet-node/src/: config.rs  lib.rs  main.rs
oprf-testnet-public-client/: Cargo.toml
oprf-testnet-public-client/src/: main.rs
oprf-testnet-service/: Cargo.toml
oprf-testnet-service/deploy/: docker-compose.yml
oprf-testnet-service/src/: auth.rs  config.rs  lib.rs
