[workspace]
resolver = "3"
members = [
  "oprf-testnet-authentication",
  "oprf-testnet-client",
  "oprf-testnet-node",
]

[workspace.package]
edition = "2024"
rust-version = "1.90"
readme = "./README.md"
homepage = "https://www.taceo.io"
repository = "https://github.com/TaceoLabs/"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
alloy = { version = "2.0", default-features = false }
alloy-primitives = "1.5.7"
alloy-signer-local = "2"
ark-babyjubjub = { package = "taceo-ark-babyjubjub", version = "^0.5.3" }
ark-ff = "0.5"
async-trait = "0.1"
axum = "0.8"
axum-test = "19"
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", rev = "v1.0.0-beta.18" }
clap = "4"
config = "0.15.19"
eddsa-babyjubjub = { package = "taceo-eddsa-babyjubjub", version = "^0.5.4" }
eyre = { version = "0.6" }
humantime = "2"
humantime-serde = "1"
nargo = { git = "https://github.com/noir-lang/noir.git", rev = "v1.0.0-beta.18" }
nodes-common = { package = "taceo-nodes-common", version = "0.4.3" }
nodes-observability = { package = "taceo-nodes-observability", version = "0.1" }
noir_artifact_cli = { git = "https://github.com/noir-lang/noir.git", rev = "v1.0.0-beta.18" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir.git", rev = "v1.0.0-beta.18" }
poseidon2 = { package = "taceo-poseidon2", version = "0.2", default-features = false }
rand = { version = "0.8" }
reqwest = { version = "0.13", default-features = false }
rustls = "0.23"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
taceo-merces1-x402 = { git = "https://github.com/TaceoLabs/merces1-x402.git", branch = "fg/chores", version = "0.1", features = [
  "client",
  "server"
] }
taceo-oprf = { version = "0.11", default-features = false }
taceo-oprf-client = { package = "taceo-oprf-client", path = "/Users/guggi/Documents/projects/oprf-service/oprf-client/", version = "0.9.2" }
tempfile = "3"
thiserror = { version = "2" }
tokio = { version = "1" }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = { version = "0.1" }
webpki-roots = { version = "1.0" }
x402-axum = "1.4.6"
x402-chain-eip155 = "1.4.6"
x402-reqwest = "1.4.6"
x402-types = "1.4.6"

# This profile can be used for CI in pull requests.
[profile.ci-dev]
inherits = "dev"
opt-level = 1
debug = true
incremental = false

[profile.profiling]
inherits = "bench"
debug = true
lto = "thin"
