[package]
name = "taceo-oprf-testnet-authentication"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws"] }
eyre.workspace = true
reqwest = { workspace = true, features = [
  "json",
  "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
taceo-oprf = { workspace = true, features = ["full"] }
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
