[package]
name = "taceo-oprf-testnet-authentication"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["ws"] }
eyre.workspace = true
reqwest = { workspace = true, features = [
  "json",
  "rustls-tls",
] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
taceo-oprf = { workspace = true, features = ["client", "service"] }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
