[package]
name = "taceo-oprf-testnet-authentication"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["ws"] }
bn254_blackbox_solver.workspace = true
eyre.workspace = true
nargo.workspace = true
noir_artifact_cli.workspace = true
noirc_artifacts.workspace = true
reqwest = { workspace = true, features = [
  "json",
  "rustls-tls",
] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
taceo-oprf = { workspace = true, features = ["client", "service"] }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# pinned versions to make noir compile
elliptic-curve = { version = "=0.14.0-rc.17", default-features = false, features = [
  "sec1"
] }
k256 = "=0.14.0-rc.1"
p256 = "=0.14.0-rc.1"
rand_core = "=0.10.0-rc-2"
