[package]
name = "taceo-oprf-testnet-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "taceo-oprf-testnet-client"
path = "bin/main.rs"

[dependencies]
alloy = { workspace = true, features = [
  "full",
  "node-bindings",
  "rpc",
  "rpc-client-ws",
  "serde",
] }
ark-babyjubjub = { workspace = true }
ark-ff = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
oprf-testnet-authentication = { package = "taceo-oprf-testnet-authentication", path = "../oprf-testnet-authentication", version = "0.1" }
rand.workspace = true
rand_chacha.workspace = true
rustls.workspace = true
taceo-oprf = { workspace = true, features = ["client"] }
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tracing.workspace = true
webpki-roots.workspace = true
