[package]
name = "taceo-oprf-testnet-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = [
  "full",
  "node-bindings",
  "rpc",
  "rpc-client-ws",
  "serde",
] }
alloy-primitives = { workspace = true }
alloy-signer-local.workspace = true
ark-babyjubjub = { workspace = true }
ark-ff = { workspace = true }
axum = { workspace = true }
ciborium = "0.2"
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
futures-util = "0.3"
nodes-observability.workspace = true
oprf-testnet-authentication = { package = "taceo-oprf-testnet-authentication", path = "../oprf-testnet-authentication", version = "0.1" }
oprf-types-compat = { package = "taceo-oprf-types", version = "0.11" }
rand.workspace = true
reqwest = { workspace = true, features = ["rustls"] }
rustls.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
taceo-merces1-x402 = { workspace = true, features = ["client", "server"] }
taceo-oprf = { workspace = true, features = ["client", "core", "types"] }
tempfile.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-tungstenite = { workspace = true }
tracing.workspace = true
uuid = "1"
webpki-roots.workspace = true
x402-chain-eip155 = { workspace = true, features = ["client"] }
x402-reqwest.workspace = true
x402-types = { workspace = true, features = ["full"] }
