[package]
name = "taceo-oprf-testnet-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, default-features = false }
alloy-primitives = { workspace = true }
axum = { workspace = true }
config.workspace = true
eyre.workspace = true
humantime = { workspace = true }
humantime-serde = { workspace = true }
nodes-common = { workspace = true }
nodes-observability = { workspace = true }
oprf-testnet-authentication = { package = "taceo-oprf-testnet-authentication", path = "../oprf-testnet-authentication", version = "0.1" }
rustls = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
taceo-oprf = { workspace = true, features = ["core", "service", "types"] }
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tracing.workspace = true
x402-axum = { workspace = true, features = ["telemetry"] }
x402-chain-eip155 = { workspace = true, features = ["server"] }
x402-types = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
eddsa-babyjubjub = { workspace = true }
# oprf-test = { package = "taceo-oprf-test", path = "../oprf-test", version = "0.1" }
poseidon2 = { workspace = true }
testcontainers-modules = { version = "0.15", features = ["localstack"] }
