[package]
name = "taceo-oprf-testnet-public-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "rpc", "rpc-client-ws"] }
ark-babyjubjub.workspace = true
ark-ff.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
oprf-testnet-client = { package = "taceo-oprf-testnet-client", path = "../oprf-testnet-client", version = "0.1" }
rand.workspace = true
rand_chacha.workspace = true
rustls.workspace = true
taceo-oprf.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tracing.workspace = true
webpki-roots.workspace = true
