[package]
name = "taceo-oprf-testnet-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
axum = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
humantime = { workspace = true }
nodes-common = { workspace = true }
nodes-observability = { workspace = true }
oprf-service.workspace = true
oprf-testnet-authentication = { package = "taceo-oprf-testnet-authentication", path = "../oprf-testnet-authentication", version = "0.1" }
oprf-types.workspace = true
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
axum-test = { workspace = true }
eddsa-babyjubjub = { workspace = true }
oprf-client = { package = "taceo-oprf-testnet-client", path = "../oprf-testnet-client/", version = "0.1" }
# oprf-test = { package = "taceo-oprf-test", path = "../oprf-test", version = "0.1" }
poseidon2 = { workspace = true }
testcontainers-modules = { version = "0.14", features = ["localstack"] }
